# tee-bench

./: .gitattributes  .gitignore  Makefile  README.md  native.cpp  run.sh
App/: App.cpp  App.h
Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h  Enclave1GB.config.xml  Enclave2GB.config.xml  Enclave32GB.config.xml  Enclave4GB.config.xml  Enclave8GB.config.xml
FHE/: CMakeLists.txt  FheJoin.cbp  Stopwatch.h  data-types.h  dte_join.cpp  fhe_join.cpp  generator.cpp  generator.h  openssl_rsa.cpp  openssl_rsa.h  private_key  prj_params.h  public_key
FHE/rho/: barrier.h  prj_params.h  radix_join.cpp  radix_join.h  task_queue.h
Include/: MersenneTwister.h  Utils.h  barrier.h  btree.h  data-types.h  db_primitives.h  layout.h  npj_params.h  npj_types.h  params.h  prj_params.h  sort.h  task_queue.h  task_queue_atomic.hpp  trace_mem.h  util.c  util.h
Joins/: nested_loop_join.cpp  nested_loop_join.h  no_partitioning_join.h  radix_join.c  radix_join.h  radix_sortmerge_join.c  radix_sortmerge_join.h
scripts/: amd-throughput.py  benchmark.py  commons.py  compile.sh  config.yaml  exp0-seal-materialize-experiment.py  exp1-off-the-shelf-performance.py  exp10-skew-experiment.py  exp11-sorted-input-experiment.py  exp12-throughput-oblivious-algos-experiment.py  exp13-throughput-scale-input-experiment.py  exp14-seal-chunk-size.py  exp15-multi-threading-atomic-experiment.py  exp2-multi-threading-experiment.py  exp3-multi-threading-affinity-experiment.py  exp4-performance-counters-experiment-SUDO.py  exp5-real-dataset-experiment.py  exp6-scale-r-experiment-SUDO.py  (+11 more)
(+599 files in other folders)
